# coda

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUGGING.md  Makefile  PLAN.md  README.md  coda-baseline  coda-fix1  coda-fix2  coda-fix3  coda-latest  coda-moveord  coda-see-fix  coda-see-fix2  coda-staged  coda-tt-fixes  debug_tiny_test.go  experiments.md  net.txt  nps_microbench_Adams-MacBook-Air_2026-04-24.csv  nps_microbench_callisto_2026-04-23.csv  nps_microbench_hercules_2026-04-23.csv  nps_microbench_ionos1_2026-04-23.csv  nps_microbench_ionos6_2026-04-23.csv  nps_microbench_jupiter_2026-04-24.csv  nps_microbench_lo_2026-04-23.csv  nps_microbench_thebe_2026-04-23.csv  nps_microbench_thor_2026-04-23.csv  nps_microbench_titan_2026-04-23.csv  run_gauntlet.sh  todo.md
docs/: README.md  arm_claude_briefing_2026-04-25.md  arm_correctness_2026-04-25.md  bench_calibration.csv  bullet_cpu_bottleneck_2026-04-25.md  byteboard_splat_scoping_2026-05-03.md  caphist_defender_rebase_finding_2026-04-19.md  caphist_retune_proposal_2026-04-19.md  capture_ordering_crossengine_2026-04-20.md  coda_vs_reckless_nps.md  coda_vs_reckless_nps_2026-04-23.md  correctness_audit_2026-04-22.md  correctness_audit_2026-04-25.md  cross_engine_comparison_2026-04-25.md  factoriser_design_2026-04-21.md  good_bad_quiet_split_v3_plan.md  group_lasso_runbook_2026-04-24.md  hobbes_review_2026-05-01.md  hobbes_selfplay_case_study_2026-04-30.md  improvement_portfolio_2026-04-24.md  lmp_reckless_alignment_plan_2026-04-26.md  lmr_crossengine_2026-04-29.md  loss_analysis_2026-04-28.md  motor_review_2026-05-01.md  (+46 more)
(+137 files in other folders)
