[package]
name = "coda"
version = "0.1.0"
edition = "2021"
description = "Chess Optimised, Developed Agentically — a UCI chess engine"
authors = ["Adam Twiss"]

[dependencies]
shakmaty = "0.30"
shakmaty-syzygy = "0.28"
libc = "0.2"
sfbinpack = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }

[features]
embedded-net = []
profile-materialize = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
